
wxwindows2.4 (2.4.0) unstable; urgency=low

  * The fingers crossed release.
  * de.po typo fix.  Closes: #174084
  * tr.po stable tree patch.  Closes: #174667
  * Add a manpage for the wxPython scripts pointing to the pydoc docs.
  * Disabled generation of gtk-univ, it is a rather insensible combination
    now and should be replaced by x11-univ instead.

 -- Ron Lee <ron@debian.org>  Thu, 19 Dec 2002 00:50:48 -0800

wxwindows2.3 (2.3.4.1) unstable; urgency=low

  * 2.4.0pre1 I guess.
  * Added -ffunction-sections for broken hppa linker. Closes: #162948
  * Conflict/Replace wxPython2.2.  Since its nmu these two packages
    can no longer currently coexist.  Closes: #171258
  * xrced.py path search fixed.  Closes: #168148, #170748
  * Actually install all wxUniv headers to the header package.
    Closes: #168250, #164557
  * Robin tells me this one should be fixed in 2.3 too, I can't confirm
    so please reopen if it's not.  Closes: #172390
  * Added menu items for pycrust/pyshell, thanks Martin.  Closes: #172447
  * Broken header fixed.  Closes: #168887

 -- Ron Lee <ron@debian.org>  Mon, 18 Nov 2002 18:54:21 -0800

wxwindows2.3 (2.3.3.2) unstable; urgency=low

  * The one more for luck release.
  * Debian-wise, it fixes the problem with contrib lib name clashes;
    code-wise, lots of little issues (and a couple of big 'uns) from
    2.3.3 -- see the more regular change or cvs logs for details...
  * Yes, it's still the unstable branch, yes the request for testing
    to see if we can reasonably obsolete 2.2 in post-woody debian
    is still current, and yes we're still working toward a stable
    2.4 release as fast as we can.   Big thanks to everyone who's
    been patient and/or active fixing things.

 -- Ron Lee <ron@debian.org>  Thu, 26 Sep 2002 17:43:05 -0700

wxwindows2.3 (2.3.3.1) unstable; urgency=low

  * Ok, Robin says wxPython is good to go.
  * Since wx2.2 has crashed and burned with the new releases of