@@ -1,7 +1,7 @@
-?package(libwxgtk2.3-python):needs=X11 section=Apps/Programming\
+?package(libwxgtk=V-python):needs=X11 section=Apps/Programming\
   title="pycrust" command="/usr/bin/pycrust"
-?package(libwxgtk2.3-python):needs=X11 section=Apps/Programming\
+?package(libwxgtk=V-python):needs=X11 section=Apps/Programming\
   title="pyshell" command="/usr/bin/pyshell"
-?package(libwxgtk2.3-python):needs=X11 section=Apps/Programming\
+?package(libwxgtk=V-python):needs=X11 section=Apps/Programming\
   title="xrced" command="/usr/bin/xrced"
 
